fix(CDLP-44): fix nav component from version mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -285,7 +285,7 @@ button {
 
 .hoverLi {
   cursor: pointer;
-  margin-top: 5px;
+  padding: 5px 0;
 }
 
 .hoverLi:hover {
